--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,3 +1,15 @@
+/*=================================
+// BOOKMARK
+// 1. BASE
+// 2. nav item's menu mobile
+// 3. HEADER DESKTOP
+// 4. footer
+// 5. carosel
+// 6. news page
+// 7. login page
+==================================*/
+
+
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
 /*===== FONT-FACE =====*/
 @font-face {
@@ -47,6 +59,7 @@ body{
 h1,h2,p{
   	margin: 0;
 }
+h3 { font-size: 1rem !important; }
 ul{
 	margin: 0;
 	padding: 0;
@@ -64,6 +77,10 @@ img{
 	max-width: 73.125rem;
 	width: 100%;
 	margin: auto;
+}
+.item-title {
+	font-weight: 500;
+	font-size: 0.875rem;
 }
 /*===== CLASS CSS =====*/
 .header.is-mobile {
@@ -84,7 +101,7 @@ img{
 	margin: 1rem;
 }
 .nav-menu{
-	position: fixed;
+	position: absolute;
 	top: 0;
 	left: -100%;
 	width: 20rem;
@@ -135,6 +152,8 @@ img{
 /*=== nav item's menu mobile ===*/
 .wrap {
 	position: relative;
+	overflow: hidden;
+	background: #e9faf6;
 }
 .bg-nav-menu{
 	left: -100%;
@@ -235,12 +254,9 @@ img{
 	box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.06);
 	border-radius: 0.5rem;
 }
-/*.m-card.mobile-service, .m-card.service  {
-	max-width: 19.25rem;
-	width: 100%;
-}*/
 .m-card.mobile-service {
 	padding: 1.125rem 1.3125rem 1.0625rem 1.5rem;
+	width: 30rem;
 }
 .m-card.service .m-card-body, 
 .m-card.events .m-card-body {
@@ -269,7 +285,8 @@ img{
 	line-height: 1.3125rem;
 }
 .mobile-service-content, .service-content, .events-content, .customer-content {
-	padding: 0.75rem;
+	padding-top: 0.75rem;
+	padding-bottom: 0.75rem;
 }
 .m-card.events .time {
 	font-size: 0.75rem;
@@ -322,7 +339,7 @@ h1.title {
 	margin-top: 0.625rem;
 }
 .m-card.event-nd .event-image img {
-	width: 9.25rem;
+	height: 100%;
 }
 .event-nd-content {
 	width: 100%;
@@ -376,11 +393,15 @@ h1.title {
 .content-header {
 	display: flex;
 }
+.content-header p {
+	cursor: pointer;
+}
 /*=== FOOTER ===*/
 .footer {
 	background-color: #0E418A;
 	padding-left: 0.75rem;
 	padding-right: 1.5625rem;
+	margin-top: 1.5rem;
 }
 .footer-row {
 	display: flex;
@@ -407,6 +428,11 @@ h1.title {
 	background-color: rgba(255, 255, 255, 0.2);
 	height: 1px;
 	margin-top: 1rem;
+}
+.line-bg-white {
+	background-color: #818C9E;
+	height: 1px;
+	margin-top: 1.6875rem;
 }
 .footer-row .info {
 	display: flex;
@@ -541,10 +567,143 @@ ul.nav-list-mobile li {
 .lSAction {
 	display: none !important;
 }
+/*=== news page ===*/
+.main-content {
+	margin-top: 1.5rem;
+}
+.event-nd-content .title {
+	font-size: 0.75rem;
+	line-height: 1.5625rem;
+	color: var(--blue);
+	margin-bottom: 0;
+	padding: 0;
+}
+/*=== login page ===*/
+.main-content .inner{
+	padding: 0 0.5rem;
+}
+.content-title.is-mobile {
+	font-size: var(--smaller-font-size);
+	line-height: 1rem;
+	text-transform: uppercase;
+	letter-spacing: -0.337647px;
+	font-weight: var(--biger-font-weight);
+}
+.login-body .input-box, .login-body .button  {
+	max-width: 33.625rem;
+	margin: 0 auto;
+}
+.login-body .button {
+	margin: auto;
+	margin-top: 5rem;
+	margin-bottom: 2.375rem;
+	text-transform: uppercase;
+	font-size: var(--smallest-font-size);
+}
+.login-body ul {
+	justify-content: center;
+	margin-bottom: 1.4375rem;
+}
+.login-body ul li:first-child {
+	margin-right: 1.4375rem;
+}
+.login-body ul li {
+	font-size: var(--smaller-font-size);
+	font-weight: 500;
+	cursor: pointer;
+}
+.login-body ul .active {
+	color: var(--blue);
+	line-height: 2rem;
+	border-bottom: 1px solid var(--blue);
+}
+#quick-login .m-card {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding-top: 1rem;
+}
+#quick-login div img.qrcode {
+	width: 6.25rem;
+}
+#quick-login div div .line-bg-white {
+	margin-left: -2rem;
+	margin-right: -2rem;
+}
+#quick-login div div p {
+	margin-top: -1.2rem;
+	line-height: 1rem;
+	padding: 0.5rem;
+	background-color: white;
+}
+.social-media {
+	margin-bottom: 1.5rem;
+}
+.social-media__box {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+.social-media__box img {
+	width: 3.375rem;
+	height: 3.375rem;
+	margin: 0 1rem;
+}
+#normal-login{
+	position: relative;
+	margin-bottom: 5rem;
+	padding-bottom: 0.5rem;
+}
+#normal-login .forget-password {
+	color: var(--blue);
+	font-style: italic;
+	margin-right: 0;
+	position: absolute;
+    bottom: 0;
+    right: 0;
+    border-bottom: 1px solid var(--blue);
+}
+.login-body .input-box{
+	margin-top: 0.75rem;
+}
+.hidden[data-method-login-content] {
+	display: none;
+}
+/*=== news page ===*/
+.other-news .title {
+	font-style: normal;
+	font-weight: 500;
+	line-height: 2.375rem;
+}
+.inner .content-title {
+	margin-bottom: 1rem;
+}
+.service-content.news-page h2 {
+	font-size: 1.5rem;
+}
+.service-content.news-page img {
+	border-radius: 0.5rem 0 0 0.5rem;
+}
+.service-content.news-page .time {
+	text-align: right;
+	padding-right: 1rem;
+}
 /*===== MEDIA QUERY =====*/
 @media screen and (min-width: 768px){
+	main {
+		min-height: 100vh;
+		height: 100%;
+	}
 	ul.nav-list li {
 		position: relative;
+	}
+	h3 {
+		font-size: 1.125rem !important;
+	}
+	.item-title {
+		font-size: 1.125rem;
 	}
 	.m-card.mobile-service, .m-card.service  {
 		max-width: none;
@@ -568,6 +727,9 @@ ul.nav-list-mobile li {
 		padding-right: 1rem;
 	}
 	h2.title, h1.title {
+		font-size: 1.5rem;
+	}
+	.content-title h2{
 		font-size: 1.5rem;
 	}
 	.header.is-desktop .inner {
@@ -645,7 +807,7 @@ ul.nav-list-mobile li {
 		line-height: 1.75rem;
 		margin-right: 4rem;
 	}
-	.content-header p {
+	.content-header p.active {
 		border-bottom: 1px solid var(--blue);
 	}
 	.content-header .all {
@@ -728,6 +890,102 @@ ul.nav-list-mobile li {
 	}
 	.showItem {
 		top: 11rem;
+	}
+	.content-title {
+		display: inline-flex;
+		align-items: center;
+	}
+	.login-body {
+		padding-top: 2.25rem;
+		padding-bottom: 2.25rem;
+		background-color: white;
+		border: 1px solid #E0E0E0;
+		box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.06);
+		border-radius: 8px;
+	}
+	.login-body #normal-login {
+		padding-top: 2.25rem;
+		padding-bottom: 2.25rem;
+		background-color: white;
+		border: 1px solid #E0E0E0;
+		box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.06);
+		border-radius: 8px;
+	}
+	.login-body.login-body__method {
+		background: none;
+		border: none;
+    	box-shadow: none;
+	}
+	.content-title.is-mobile {
+		display: none;
+	}
+	.login-body ul {
+		margin-bottom: 2.0625rem;
+	}
+	.login-body ul li {
+		font-size : 1.125rem;
+	}
+	.login-body ul li:first-child {
+		margin-right: 4.1875rem;
+	}
+	#quick-login .m-card {
+		padding-top: 2.3125rem;
+	}
+	#normal-login .submit-box {
+		max-width: 33.625rem;
+	    display: flex;
+	    flex-direction: column-reverse;
+	    margin: 0 auto;
+	}
+	#normal-login .submit-box .forget-password {
+	    top: 2rem;
+	    height: fit-content;
+	    position: relative;
+	    float: right;
+	}
+	/*=== news page ===*/
+	.events-menu {
+		display: flex;
+		justify-content: center;
+	}
+	.events-menu li {
+		margin: 2.125rem 1.3125rem 1.9375rem 1.3125rem;
+		font-size: 1.5rem;
+		line-height: 1.75rem;
+		font-weight: var(--biger-font-weight);
+	}
+	.events-menu .active {
+		color: var(--blue);
+	}
+	.events-content.news-page .content-body .m-card{
+		border-radius: 0.5rem;
+	}
+	/*=== news detail ===*/
+	.news-detail-content{
+		background: #FFFFFF;
+		border: 1px solid #E0E0E0;
+		box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.06);
+		border-radius: 1.5rem;
+		padding: 2.25rem 3.1875rem 2.25rem 1.5rem;
+	}
+	.news-detail-content .title {
+		font-weight: 500;
+		font-size: 1.5rem;
+		line-height: 2.375rem;
+		margin-bottom: 1.2rem;
+	}
+	.news-detail-content img {
+		width: auto;
+    	margin: 1.5rem auto;
+	}
+	.news-detail-content .share-box {
+		display: flex;
+		margin-top: 1.6875rem;
+	}
+	.news-detail-content .share-box .button {
+		padding: 0.5rem 0.75rem;
+		border-radius: 1.5rem;
+		margin-right: 1.5rem;
 	}
 }
 @media screen and (min-width: 992px){
@@ -874,4 +1132,54 @@ ul.nav-list-mobile li {
 	.customer-content .content-header {
 		margin-top: 4.625rem;
 	}
+	/*[data-tab-content] {
+		display: none;
+	}*/
+	.active[data-tab-content] {
+		display: block;
+	}
+	/*.lSSlideOuter:nth-of-type(2) {
+		display: none;
+	}*/
+	.hidden.m-tab {
+		display: none;
+	}
+	/*=== news page ===*/
+	.login.is-desktop {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+	.main-content {
+		margin-top: 3.75rem;
+	}
+	.other-news .events-content .content-body {
+		display: flex;
+		flex-direction: column;
+	}
+	.other-news{
+		margin-top: 2rem;
+		background: #FFFFFF;
+		border: 1px solid #E0E0E0;
+		box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.06);
+		border-radius: 1.5rem;
+		padding: 2.25rem 3.1875rem 2.25rem 1.5rem;
+	}
+	.other-news .title {
+		font-style: normal;
+		font-weight: 500;
+		font-size: 1.5rem;
+		line-height: 2.375rem;
+	}
+	.other-news__content .news-item {
+		padding-top: 1.5rem;
+		padding-bottom: 2.9375rem;
+		border-bottom: 1px solid #D8D8D8;
+		display: flex;
+	}
+	.other-news__content .news-item .news-image img {
+		margin-right: 1.5rem;
+		width: 21.5rem;
+	}
 }
+
