--- a/public/css/icon.css
+++ b/public/css/icon.css
@@ -1,4 +1,14 @@
 .icon {
-	width: 24px;
-	height: 24px;
+	width: 1.5rem;
+	height: 1.5rem;
+}
+.icon-small {
+	width: 1rem;
+	height: 1rem;
+}
+@media screen and (min-width: 768px){
+	.icon-small {
+		width: 1.125rem;
+		height: 1.125rem;
+	}
 }
