--- a/public/css/icon.css
+++ b/public/css/icon.css
@@ -6,9 +6,20 @@
 	width: 1rem;
 	height: 1rem;
 }
+.pack-thumb {
+	width: 2.625rem;
+	height: 2.625rem;
+}
+.avatar {
+	width: 4.25rem;
+}
 @media screen and (min-width: 768px){
 	.icon-small {
 		width: 1.125rem;
 		height: 1.125rem;
+	}
+	.pack-thumb {
+		width: 3.125rem;
+		height: 3.125rem;
 	}
 }
